admin dashboard pie chart and bar chart

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -9,6 +9,7 @@
                 <!-- Widgets  -->
                 <div class="row">
                     <div class="col-lg-3 col-md-6">
+                        {% comment %} <canvas id="pieChart" width="400" height="200"></canvas> {% endcomment %}
                         <div class="card">
                             <div class="card-body">
                                 <div class="stat-widget-five">
@@ -89,13 +90,38 @@
                                 <h4 class="box-title">Traffic </h4>
                             </div>
                             <div class="row">
-                                <div class="col-lg-8">
+                                <div class="col-lg-12">
                                     <div class="card-body">
                                         <!-- <canvas id="TrafficChart"></canvas>   -->
-                                        <div id="traffic-chart" class="traffic-chart"></div>
+                                        {% comment %} <div id="traffic-chart" class="traffic-chart"></div> {% endcomment %}
+                                        <div class="orders">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <canvas id="ordersChart" width="400" height="200"></canvas>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <canvas id="revenueChart" width="400" height="200"></canvas>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <canvas id="mostSoldChart" width="400" height="200"></canvas>
+                                                    <!-- Display the most sold product dynamically -->
+                                                    {% comment %} <div id="most-sold-product">Most Sold Product: Loading...</div> {% endcomment %}
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <canvas id="leastSoldChart" width="400" height="200"></canvas>
+                                                    <!-- Display the least sold product dynamically -->
+                                                    
+                                                    {% comment %} <div id="least-sold-product">Least Sold Product: Loading...</div> {% endcomment %}
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                            
+
+                                {% comment %} <div class="col-lg-4">
                                     <div class="card-body">
                                         <div class="progress-box progress-1">
                                             <h4 class="por-title">Last Month Orders</h4>
@@ -126,180 +152,58 @@
                                             </div>
                                         </div>
                                     </div> <!-- /.card-body -->
-                                </div>
-                            </div> <!-- /.row -->
-                            <div class="card-body"></div>
-                        </div>
-                    </div><!-- /# column -->
-                </div>
-                <!--  /Traffic -->
-                <div class="clearfix"></div>
-                <!-- Orders -->
-                <div class="orders">
-                    <div class="row">
-                        <div class="col-xl-8">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="box-title">Orders </h4>
-                                </div>
-                                <div class="card-body--">
-                                    <div class="table-stats order-table ov-h">
-                                        <table class="table ">
-                                            <thead>
-                                                <tr>
-                                                    <th class="serial">#</th>
-                                                    <th class="avatar">Avatar</th>
-                                                    <th>ID</th>
-                                                    <th>Name</th>
-                                                    <th>Product</th>
-                                                    <th>Quantity</th>
-                                                    <th>Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="serial">1.</td>
-                                                    <td class="avatar">
-                                                        <div class="round-img">
-                                                            <a href="#"><img class="rounded-circle" src="images/avatar/1.jpg" alt=""></a>
-                                                        </div>
-                                                    </td>
-                                                    <td> #5469 </td>
-                                                    <td>  <span class="name">Louis Stanley</span> </td>
-                                                    <td> <span class="product">iMax</span> </td>
-                                                    <td><span class="count">231</span></td>
-                                                    <td>
-                                                        <span class="badge badge-complete">Complete</span>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="serial">2.</td>
-                                                    <td class="avatar">
-                                                        <div class="round-img">
-                                                            <a href="#"><img class="rounded-circle" src="images/avatar/2.jpg" alt=""></a>
-                                                        </div>
-                                                    </td>
-                                                    <td> #5468 </td>
-                                                    <td>  <span class="name">Gregory Dixon</span> </td>
-                                                    <td> <span class="product">iPad</span> </td>
-                                                    <td><span class="count">250</span></td>
-                                                    <td>
-                                                        <span class="badge badge-complete">Complete</span>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="serial">3.</td>
-                                                    <td class="avatar">
-                                                        <div class="round-img">
-                                                            <a href="#"><img class="rounded-circle" src="images/avatar/3.jpg" alt=""></a>
-                                                        </div>
-                                                    </td>
-                                                    <td> #5467 </td>
-                                                    <td>  <span class="name">Catherine Dixon</span> </td>
-                                                    <td> <span class="product">SSD</span> </td>
-                                                    <td><span class="count">250</span></td>
-                                                    <td>
-                                                        <span class="badge badge-complete">Complete</span>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="serial">4.</td>
-                                                    <td class="avatar">
-                                                        <div class="round-img">
-                                                            <a href="#"><img class="rounded-circle" src="images/avatar/4.jpg" alt=""></a>
-                                                        </div>
-                                                    </td>
-                                                    <td> #5466 </td>
-                                                    <td>  <span class="name">Mary Silva</span> </td>
-                                                    <td> <span class="product">Magic Mouse</span> </td>
-                                                    <td><span class="count">250</span></td>
-                                                    <td>
-                                                        <span class="badge badge-pending">Pending</span>
-                                                    </td>
-                                                </tr>
-                                                <tr class=" pb-0">
-                                                    <td class="serial">5.</td>
-                                                    <td class="avatar pb-0">
-                                                        <div class="round-img">
-                                                            <a href="#"><img class="rounded-circle" src="images/avatar/6.jpg" alt=""></a>
-                                                        </div>
-                                                    </td>
-                                                    <td> #5465 </td>
-                                                    <td>  <span class="name">Johnny Stephens</span> </td>
-                                                    <td> <span class="product">Monitor</span> </td>
-                                                    <td><span class="count">250</span></td>
-                                                    <td>
-                                                        <span class="badge badge-complete">Complete</span>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div> <!-- /.table-stats -->
-                                </div>
-                            </div> <!-- /.card -->
-                        </div>  <!-- /.col-lg-8 -->
-
-                        <div class="col-xl-4">
-                            <div class="row">
-                                <div class="col-lg-6 col-xl-12">
-                                    <div class="card br-0">
+                                </div> {% endcomment %}
+                            {% comment %} <div class="col-xl-12"> {% endcomment %}
+                                <div class="row col-md-12 text-center">
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="card">
                                         <div class="card-body">
-                                            <div class="chart-container ov-h">
-                                                <div id="flotPie1" class="float-chart"></div>
+                                            <!-- <h4 class="box-title">Chandler</h4> -->
+                                            <div class="calender-cont widget-calender">
+                                                <canvas id="pieChart" width="400" height="200"></canvas>
+                                                {% comment %} <div id="calendar"></div> {% endcomment %}
                                             </div>
                                         </div>
                                     </div><!-- /.card -->
                                 </div>
 
-                                <div class="col-lg-6 col-xl-12">
-                                    <div class="card bg-flat-color-3  ">
+                                <!-- Calender Chart Weather  -->
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <!-- <h4 class="box-title">Chandler</h4> -->
+                                            <div class="calender-cont widget-calender">
+                                                <div id="calendar"></div>
+                                            </div>
+                                        </div>
+                                    </div><!-- /.card -->
+                                </div>
+                                <!-- /Calender Chart Weather -->
+
+                                <div class="col-md-12 col-lg-4">
+                                    <div class="card bg-flat-color-3 ">
                                         <div class="card-body">
                                             <h4 class="card-title m-0  white-color ">August 2018</h4>
                                         </div>
                                          <div class="card-body">
                                              <div id="flotLine5" class="flot-line"></div>
                                          </div>
-                                    </div>
+                                    </div><!-- /.card -->
                                 </div>
-                            </div>
-                        </div> <!-- /.col-md-4 -->
-                    </div>
-                </div>
-                <!-- /.orders -->
-                
-                <!-- Calender Chart Weather  -->
-                <div class="row">
-                    <div class="col-md-12 col-lg-4">
-                        <div class="card">
-                            <div class="card-body">
-                                <!-- <h4 class="box-title">Chandler</h4> -->
-                                <div class="calender-cont widget-calender">
-                                    <div id="calendar"></div>
                                 </div>
-                            </div>
-                        </div><!-- /.card -->
-                    </div>
+                            {% comment %} </div> <!-- /.col-md-4 --> {% endcomment %}
 
-                    <div class="col-lg-4 col-md-6">
-                        <div class="card ov-h">
-                            <div class="card-body bg-flat-color-2">
-                                <div id="flotBarChart" class="float-chart ml-4 mr-4"></div>
-                            </div>
-                            <div id="cellPaiChart" class="float-chart"></div>
-                        </div><!-- /.card -->
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="card weather-box">
-                            <h4 class="weather-title box-title">Weather</h4>
-                            <div class="card-body">
-                                <div class="weather-widget">
-                                    <div id="weather-one" class="weather-one"></div>
-                                </div>
-                            </div>
-                        </div><!-- /.card -->
-                    </div>
+                            </div> <!-- /.row -->
+                            
+                            <div class="card-body"></div>
+                        </div>
+                        
+                    </div><!-- /# column -->
+                    
                 </div>
-                <!-- /Calender Chart Weather -->
+                <!--  /Traffic -->
+                
+                
                 <!-- Modal - Calendar - Add New Event -->
                 <div class="modal fade none-border" id="event-modal">
                     <div class="modal-dialog">
@@ -334,14 +238,14 @@
                                             <input class="form-control form-white" placeholder="Enter name" type="text" name="category-name"/>
                                         </div>
                                         <div class="col-md-6">
-                                            <label class="control-label">Choose Category Color</label>
+                                            <label class="control-label">Mark It As</label>
                                             <select class="form-control form-white" data-placeholder="Choose a color..." name="category-color">
-                                                <option value="success">Success</option>
-                                                <option value="danger">Danger</option>
-                                                <option value="info">Info</option>
-                                                <option value="pink">Pink</option>
-                                                <option value="primary">Primary</option>
-                                                <option value="warning">Warning</option>
+                                                <option value="sCompleted">Completed</option>
+                                                <option value="Incompleted">Incompleted</option>
+                                                <option value="Info">Info</option>
+                                                <option value="Recheck">Recheck</option>
+                                                <option value="Important">Important</option>
+                                                <option value="Warning">Warning</option>
                                             </select>
                                         </div>
                                     </div>
