admin side some updations

--- a/templates/admin/add_image_for_product.html
+++ b/templates/admin/add_image_for_product.html
@@ -35,7 +35,7 @@
 
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="normal_price">{{ form.image.label }}</label>
+            <label for="product_image">{{ form.image.label }}</label>
             {{ form.image }}
             <small class="text-danger">{{ form.errors.image }}</small>
           </div>
