--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section class="section-content padding-y">
+<section class="section-content padding-y"style="margin-top:40px;">
   <!-- COMPONENT REGISTER -->
   <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
     <article class="card-body">
