--- a/templates/includes/admin_navbar.html
+++ b/templates/includes/admin_navbar.html
@@ -34,6 +34,7 @@
                       <ul class="sub-menu children dropdown-menu">
                           <li><i class="fa fa-shopping-cart"></i><a href="{% url 'admin_productlist' %}">Product Details</a></li>
                           <li><i class="fa fa-image"></i><a href="{% url 'admin_productgallery' %}">Product Gallery</a></li>
+                          <li><i class="fa fa-shopping-cart"></i><a href="{% url 'admin_product_variations' %}">All Product Variants</a></li>
                       </ul>
                       <ul class="sub-menu children dropdown-menu">
                     </ul>
@@ -101,8 +102,8 @@
                   <div class="header-left">
                       <button class="search-trigger"><i class="fa fa-search"></i></button>
                       <div class="form-inline">
-                          <form class="search-form">
-                              <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
+                          <form action="#"class="search-form">
+                              <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search ..." aria-label="Search">
                               <button class="search-close" type="submit"><i class="fa fa-close"></i></button>
                           </form>
                       </div>
