coupon applied issue fixed

--- a/templates/user_checkout_base.html
+++ b/templates/user_checkout_base.html
@@ -243,6 +243,14 @@
 
   
 </script>
+<script>
+  // Add JavaScript to clear the input field when the page loads
+  window.onload = function() {
+      var couponInput = document.getElementById('couponInput');
+      couponInput.value = ''; // Clear the input field
+  };
+</script>
+
 
 
 </body>
